penambahan style & slides

--- a/CSS/slider.css
+++ b/CSS/slider.css
@@ -1,4 +1,3 @@
-
 .box-slider{width:1020px;margin:0 auto;height:468px}
 
 .flexslider .slides > li {display: none;position:relative} /* Hide the slides before the JS is loaded. Avoids image jumping */
@@ -22,14 +21,15 @@ html[xmlns] .slides {display: block;}
 	}
 
 .flexslider .slides img{
-	border-radius:7px;
+	border-radius:10px;
 	-moz-border-radius:7px;
 	-webkit-border-radius:7px;}
 .flexslider {
 	margin: 0 auto ;
 	position: relative;
-	width:960px;}
-
+	width:709px;
+    height:341px;
+}
 /* Control Nav */
 
 .flex-direction-nav{
@@ -50,9 +50,7 @@ cursor: pointer;
  text-indent: -9999px;
 }
 .flex-direction-nav li{position:relative;float:left;width:50%;margin-right:-10px}
-.flex-direction-nav li .flex-next {background:url(../images/next.png) no-repeat 0 0;float:right;margin-right:-38px}
-.flex-direction-nav li .flex-prev {background:url(../images/prev.png) no-repeat 0 0;float:left;margin-left:-28px}
+.flex-direction-nav li .flex-next {background:url(F:\course_group\Picture\next.png) no-repeat 0 0;float:right;margin-right:-38px}
+.flex-direction-nav li .flex-prev {background:url(F:\course_group\Picture\prev.png) no-repeat 0 0;float:left;margin-left:-28px}
 .flex-direction-nav li .disabled {opacity: .3; filter:alpha(opacity=30); cursor: default;}
 .flex-direction-nav li a:hover{background-position: 0 bottom}
-
-
