--- a/CSS/contact_project_lc.css
+++ b/CSS/contact_project_lc.css
@@ -14,3 +14,87 @@
     position: relative;
     width: 940px
 }
+/*===== menu =====*/
+
+.topmenu nav {
+	padding:32px;
+	text-align: right;
+    background-color: #c5c2a9;
+
+}
+
+.topmenu nav a{
+    color:black;
+    padding: 10px;
+    
+}
+.slides img{
+    width:100%;
+  height: 140%;
+    
+}
+
+.slides li{
+    list-style:none
+}
+
+
+.box-slogan h3{
+    margin-top: 121px;
+    font-size: 35px;
+    text-align: center;
+}
+.box-slogan p{
+    font-size: 18px;
+    text-align: center;
+    
+}
+
+.row-top{
+    padding:30px 0 40px
+}
+.row-top img{
+    vertical-align:top;
+    
+}
+
+/* Dropdown*/
+
+.dropbtn {
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 90px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    background-color: #c5c2a9;
+}
+
+.dropdown-content a:hover {background-color:#c5c2a9}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color:#c5c2a9;
+}
