line 52, add list style

--- a/CSS/slider.css
+++ b/CSS/slider.css
@@ -49,7 +49,14 @@ display: inline-block;
 cursor: pointer;
  text-indent: -9999px;
 }
-.flex-direction-nav li{position:relative;float:left;width:50%;margin-right:-10px}
+.flex-direction-nav li{
+    position:relative;
+    float:left;
+    width:50%;
+    margin-right:-10px;
+list-style:none;
+}
+
 .flex-direction-nav li .flex-next {background:url(F:\course_group\Picture\next.png) no-repeat 0 0;float:right;margin-right:-38px}
 .flex-direction-nav li .flex-prev {background:url(F:\course_group\Picture\prev.png) no-repeat 0 0;float:left;margin-left:-28px}
 .flex-direction-nav li .disabled {opacity: .3; filter:alpha(opacity=30); cursor: default;}
